--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -11,17 +11,14 @@
 }
 
 .inputs {
-  background-color: #727577;
-  border-width: 1px;
-  border-color: #1e065e;
-  border-style: solid;
-  border-radius: 3px;
+  background-color: #5c5b5b;
   width: clamp(20%, 1500px, 0%);
-  height: 100%;
+  border-radius: 5px;
   color: white;
   font-size: 16px;
   padding-left: 1%;
   margin: 10px;
+  box-shadow: 3px 3px rgba(0, 0, 0, 0.192);
 }
 
 @media (max-width: 1500px) {
@@ -51,5 +48,21 @@
 @media (max-width: 600px) {
   .section {
     min-width: 400px;
+  }
+  .inputs {
+    width: clamp(30%, 1500px, 0%);
+  }
+}
+@media (max-width: 400px) {
+  .section {
+    min-width: 350px;
+  }
+}
+@media (max-width: 350px) {
+  .section {
+    min-width: 300px;
+  }
+  .inputs {
+    width: clamp(35%, 1500px, 0%);
   }
 }
