--- a/src/components/Layout/Pages/Homepage/HomePage.module.css
+++ b/src/components/Layout/Pages/Homepage/HomePage.module.css
@@ -5,12 +5,12 @@
   border: 1px dotted white;
 }
 
-.outer,
+/* .outer,
 .content,
 .content section {
-  /* border-style: dotted;
-  border-color: white; */
-}
+  border-style: dotted;
+  border-color: white;
+} */
 
 .outer {
   position: relative;
@@ -25,17 +25,19 @@
 
 .content {
   color: white;
-  width: 65%;
+  width: 65vw;
   max-width: 1700px;
-  min-width: 1400px;
+  /* margin-bottom: 500px; */
+  /* min-width: 1400px; */
 }
 
-section {
+.section {
   /* position: relative; */
   display: grid;
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin-bottom: 200px;
   /* height: 50vh; */
 }
 
@@ -101,6 +103,12 @@ section {
   box-sizing: border-box;
 } */
 
+@media (max-width: 1000px) {
+  .section {
+    margin-bottom: 100px;
+  }
+}
+
 @media (max-width: 700px) {
   .outer {
     margin-left: 3%;
@@ -109,6 +117,5 @@ section {
   .content {
     width: 100%;
     min-height: 50vh;
-    border-color: aqua;
   }
 }
