--- a/src/components/Layout/Pages/Homepage/HomePage.module.css
+++ b/src/components/Layout/Pages/Homepage/HomePage.module.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 1px dotted white;
+  /* border: 1px dotted white; */
+  font-family: "Times New Roman", Times, serif;
 }
 
 /* .outer,
