Changed icon and finished contact form

--- a/src/components/Layout/Pages/Homepage/HomePage.module.css
+++ b/src/components/Layout/Pages/Homepage/HomePage.module.css
@@ -34,7 +34,7 @@
 
 .section {
   /* position: relative; */
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
