--- a/src/components/Layout/Pages/ProjectPage/ProjectElement-Expanded.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectElement-Expanded.module.css
@@ -39,7 +39,7 @@
   height: 88%;
   overflow-y: scroll;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 .card-article::-webkit-scrollbar {
   width: 20px;
@@ -64,6 +64,7 @@
   justify-content: space-between;
   text-align: left;
   margin-left: 30px;
+  font-size: 26px;
 
   /* margin-top: 10px; */
 }
@@ -80,13 +81,20 @@
 .card-description-width {
   width: 60%;
 }
+.card-description h1,
+.card-description h2,
+.card-description h3,
+.card-description h4 {
+  margin-top: 10px;
+  font-size: 26px;
+}
 
 .github {
   align-self: center;
   /* margin: 3% 0 0 5%; */
   margin-right: 10%;
 
-  font-size: 140%;
+  font-size: 26px;
 }
 
 .github a {
@@ -118,13 +126,18 @@ h4:active {
 }
 
 .card-image {
-  display: flex;
+  /* display: flex; */
   margin-right: 1%;
   max-width: 35%;
+  z-index: 50;
+  width: 35%;
+  /* height: 100%; */
 }
 
-.card-image img {
+.card-image * img {
   width: 100%;
+  height: 580px;
+  z-index: 50;
 }
 
 @media (max-width: 1500px) {
@@ -132,15 +145,30 @@ h4:active {
     padding-bottom: 4%;
     height: 620px;
   }
+  .card-image * img {
+    height: 80%;
+  }
 }
 
 @media (max-width: 1200px) {
   .card-header h1,
   .card-header p {
-    font-size: 35px;
+    font-size: 38px;
   }
   .card-header p {
     margin: 20px 20px 0 0;
+  }
+  .card-description h1,
+  .card-description h2,
+  .card-description h3,
+  .card-description h4 {
+    font-size: 20px;
+  }
+  .card-technologies {
+    font-size: 20px;
+  }
+  .github {
+    font-size: 20px;
   }
 }
 
@@ -154,20 +182,18 @@ h4:active {
   .card-article {
     padding-top: 5px;
   }
-  .card-technologies {
-    font-size: 90%;
+
+  .card-description h1,
+  .card-description h2,
+  .card-description h3,
+  .card-description h4 {
+    font-size: 16px;
   }
-  .card-technologies ul {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-size: 85%;
+  .card-technologies {
+    font-size: 16px;
   }
   .github {
-    font-size: 100%;
-  }
-  .card-description {
-    font-size: 95%;
-    padding-top: 0;
+    font-size: 16px;
   }
   .card-article::-webkit-scrollbar {
     width: 13px;
@@ -189,8 +215,17 @@ h4:active {
   .card-description-width {
     width: 65%;
   }
+  .card-description h1,
+  .card-description h2,
+  .card-description h3,
+  .card-description h4 {
+    font-size: 12px;
+  }
   .card-technologies {
-    margin-left: 20px;
+    font-size: 12px;
+  }
+  .github {
+    font-size: 12px;
   }
 }
 
