--- a/src/components/Layout/Pages/ProjectPage/ProjectElement.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectElement.module.css
@@ -46,6 +46,7 @@
 }
 .card-main li {
   list-style: none;
+  font-size: 19px;
 }
 
 .card-main img {
@@ -57,6 +58,21 @@
 
 .card-description {
   width: 73%;
+  height: 130px;
+  /* line-height: 10px; */
+  /* overflow-x: hidden; */
+  overflow-y: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+}
+
+.card-description h1,
+.card-description h2,
+.card-description h3,
+.card-description h4 {
+  margin-top: 10px;
+  font-size: 19px;
+  font-weight: normal;
 }
 
 .card-list {
@@ -99,14 +115,19 @@
     grid-row: 2;
     gap: 5px;
   }
-
-  .card-main .card-description {
+  .card-list li {
     font-size: 12px;
+  }
+  .card-description h1 {
+    font-size: 12px;
+  }
+  .card-main .card-description {
     text-align: left;
     display: flex;
     grid-column: 1/2;
     grid-row: 2/3;
     width: 100%;
+    height: 105px;
   }
   .card-main .card-list {
     font-size: 12px;
