--- a/src/components/Layout/Pages/ProjectPage/ProjectElement-Expanded.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectElement-Expanded.module.css
@@ -39,7 +39,7 @@
   height: 88%;
   overflow-y: scroll;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 .card-article::-webkit-scrollbar {
   width: 20px;
@@ -119,22 +119,32 @@ h4:active {
   font-size: 150%;
   padding-top: 10px;
 }
-
+.card-description h1 {
+  font-weight: normal;
+}
 .card-description h4 {
   margin-left: 1rem;
   font-weight: normal;
 }
-
+.card-description ul {
+  margin-top: 10px;
+}
+.card-description li {
+  margin-left: 30px;
+  font-size: 90%;
+}
 .card-image {
   /* display: flex; */
-  margin-right: 1%;
-  max-width: 35%;
+  margin-right: 30px;
+
   z-index: 50;
   width: 35%;
-  /* height: 100%; */
+  /* height: 620px; */
+
+  height: fit-content;
 }
 
-.card-image * img {
+.card-image img {
   width: 100%;
   height: 580px;
   z-index: 50;
@@ -145,8 +155,8 @@ h4:active {
     padding-bottom: 4%;
     height: 620px;
   }
-  .card-image * img {
-    height: 80%;
+  .card-image img {
+    height: 450px;
   }
 }
 
@@ -198,6 +208,10 @@ h4:active {
   .card-article::-webkit-scrollbar {
     width: 13px;
   }
+
+  .card-image img {
+    height: 300px;
+  }
 }
 
 @media (max-width: 800px) {
@@ -226,6 +240,11 @@ h4:active {
   }
   .github {
     font-size: 12px;
+  }
+
+  .card-image img {
+    height: 200px;
+    width: 90%;
   }
 }
 
@@ -265,7 +284,7 @@ h4:active {
     width: 8px;
   }
   .card-image img {
-    height: 200px;
+    height: 180px;
   }
 }
 
@@ -297,8 +316,8 @@ h4:active {
   .card-description {
     font-size: 11px;
   }
-  .card-image img {
-    height: 180px;
+  .card-image * img {
+    height: 150px;
   }
 }
 @media (max-width: 350px) {
@@ -307,6 +326,6 @@ h4:active {
     margin-right: 10px;
   }
   .card-image img {
-    height: 150px;
+    height: 130px;
   }
 }
